tests/bad/type_declaration.go
package main

func main() {
    var x, y int = 5, "oh no what have i done"
}
